--- a/AppX/appX0.html
+++ b/AppX/appX0.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-
+<!-- Коммент -->
     <div id="form" v-if="IsActive">
          <input type="text" placeholder="Логин" v-model="login" required>
          <input type="password" placeholder="Пароль" v-model="password" required>
